--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,10 +32,10 @@ services:
         container_name: portfolio-blog-db
         restart: unless-stopped
         environment:
-            MYSQL_DATABASE: ${DB_DATABASE}
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-            MYSQL_PASSWORD: ${DB_PASSWORD}
-            MYSQL_USER: ${DB_USERNAME}
+            MYSQL_DATABASE: portfolio_blog_db
+            MYSQL_ROOT_PASSWORD: rootpassword
+            MYSQL_PASSWORD: userpassword
+            MYSQL_USER: admin
         volumes:
             - dbdata:/var/lib/mysql
         ports:
